--- a/index.html
+++ b/index.html
@@ -48,33 +48,25 @@
 			</div>
 		</div>
 	</nav>
-=======
 </head>
 
 <body>
 
->>>>>>> 034d21d35758b6783718748ba1dd306459b6a281
     <header class="jumbotron">
 
         <!-- Main component for a primary marketing message or call to action -->
 
         <div class="container">
-<<<<<<< HEAD
+
             <div class="row row-header">
                 <div class="col-xs-12 col-sm-8">
-=======
-            <div class="row">
-                <div>
->>>>>>> 034d21d35758b6783718748ba1dd306459b6a281
+
                     <h1>Ristorante con Fusion</h1>
                     <p style="padding:40px;"></p>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-<<<<<<< HEAD
                 <div class="col-xs-12 col-sm-4">
-=======
-                <div>
->>>>>>> 034d21d35758b6783718748ba1dd306459b6a281
+
                 </div>
             </div>
         </div>
@@ -82,7 +74,6 @@
 
     <div class="container">
         <div class="row">
-<<<<<<< HEAD
 		<ol class="breadcrumb">
 		<li class="active">Home</li>
 		</ol>
@@ -93,13 +84,7 @@
                 <h3 align="center">Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-=======
-            <div>
-                <p style="padding:20px;"></p>
-                <h3 align="center">Our Lipsmacking Culinary Creations</h3>
-            </div>
-            <div>
->>>>>>> 034d21d35758b6783718748ba1dd306459b6a281
+
                 <h2>Uthappizza</h2>
                 <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
                 <p><a  href="#">More &raquo;</a></p>
@@ -107,42 +92,26 @@
         </div>
 
 
-<<<<<<< HEAD
-        <div class="row row-content">
+       <div class="row row-content">
             <div class="col-xs-12 col-sm-3">
                 <p style="padding:20px;"></p>
                 <h3 align=center>This Month's Promotions</h3>
             </div>
             <div class="col-xs-12 col-sm-9">
-=======
-        <div class="row">
-            <div>
-                <p style="padding:20px;"></p>
-                <h3 align=center>This Month's Promotions</h3>
-            </div>
-            <div>
->>>>>>> 034d21d35758b6783718748ba1dd306459b6a281
+
                 <h2>Weekend Grand Buffet</h2>
                 <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
                 <p><a href="#">More &raquo;</a></p>
             </div>
         </div>
 
-<<<<<<< HEAD
         <div class="row row-content">
             <div class="col-xs-12 col-sm-3 col-sm-push-9">
                 <p style="padding:20px;"></p>
                 <h3 align=center>Meet our Culinary Specialists</h3>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-=======
-        <div class="row">
-            <div>
-                <p style="padding:20px;"></p>
-                <h3 align=center>Meet our Culinary Specialists</h3>
-            </div>
-            <div>
->>>>>>> 034d21d35758b6783718748ba1dd306459b6a281
+
                 <h2>Alberto Somayya</h2>
                 <h4>Executive Chef</h4>
                 <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
@@ -151,44 +120,31 @@
         </div>
     </div>
 
-<<<<<<< HEAD
-    <footer class="row-footer">
+   <footer class="row-footer">
         <div class="container">
             <div class="row">             
-                <div class="col-xs-5 col-xs-offset-1 col-sm-2 col-smoffset-1">
+                <div class="col-xs-5 col-xs-offset-1 col-sm-2 col-sm-offset-1">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-=======
-    <footer>
-        <div class="container">
-            <div class="row">             
-                <div>
-                    <h5>Links</h5>
-                    <ul>
->>>>>>> 034d21d35758b6783718748ba1dd306459b6a281
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Menu</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
-<<<<<<< HEAD
                 <div class="col-xs-6 col-sm-5">
-=======
-                <div>
->>>>>>> 034d21d35758b6783718748ba1dd306459b6a281
                     <h5>Our Address</h5>
                     <address>
 		              121, Clear Water Bay Road<br>
 		              Clear Water Bay, Kowloon<br>
 		              HONG KONG<br>
-<<<<<<< HEAD
 		              <i class="fa fa-phone"></i>: +852 1234 5678<br>
 		              <i class="fa fa-fax"></i>: +852 8765 4321<br>
-		              <i class="fa fa-envelope"></i><a href="mailto:confusion@food.net"> confusion@food.net</a>
+		              <i class="fa fa-envelope"></i>: 
+                        <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
                 </div>
-		 <div class="col-xs-12 col-sm-4">
+                <div class="col-xs-12 col-sm-4">
                     <div class="nav navbar-nav" style="padding: 40px 10px;">
                         <a class="btn btn-social-icon btn-google-plus" href="http://google.com/+"><i class="fa fa-google-plus"></i></a>
                         <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
@@ -198,35 +154,11 @@
                         <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o"></i></a>
                     </div>
                 </div>
-
-                </div>
-                <div class="col-xs-12 col-sm-12">
+                <div class="col-xs-12">
                     <p style="padding:10px;"></p>
-                    <p align=center>© Copyright 2015 Ristorante Con Fusion</p>
-                </div>
-           </div>
-=======
-		              Tel.: +852 1234 5678<br>
-		              Fax: +852 8765 4321<br>
-		              Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
-		           </address>
-                </div>
-                <div>
-                    <div style="padding: 40px 10px;">
-                        <a href="http://google.com/+">Google+</a>
-                        <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
-                        <a href="http://www.linkedin.com/in/">LinkedIn</a>
-                        <a href="http://twitter.com/">Twitter</a>
-                        <a href="http://youtube.com/">YouTube</a>
-                        <a href="mailto:">Mail</a>
-                    </div>
-                </div>
-                <div>
-                    <p style="padding:10px;"></p>
-                    <p align=center>© Copyright 2015 Ristorante Con Fusion</p>
+                    <p align="center">© Copyright 2015 Ristorante Con Fusion</p>
                 </div>
             </div>
->>>>>>> 034d21d35758b6783718748ba1dd306459b6a281
         </div>
     </footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
