--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 						<li><a href="#">Desserts</a></li>
 						<li><a href="#">Drinks</a></li>
 						<li role="separator" class="divider"></li>
-						<li class=dropdown-header">Specials</li>
+						<li class=dropdown-header"> Specials</li>
 						<li><a href="#">Lunch Buffet</a></li>
 						<li><a href="#">Weekend</a></li>
 					</ul>
 				</li>
-				<li><a href="#">Contact</a></li>
+				<li><a href="contactus.html">Contact</a></li>
 			</ul>
 			</div>
 		</div>
