--- a/index.html
+++ b/index.html
@@ -31,19 +31,21 @@
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li>
 				<li><a href="about_us.html"><span class="glyphicon glyphicon-info-sign"></span> About</a></li>
-				<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu<span class="caret"></span></a><!--caret class introduces an icon-->
-					<ul class="dropdown-menu">
-						<li><a href="#">Appetizers</a></li>
-						<li><a href="#">Main Courses</a></li>
-						<li><a href="#">Desserts</a></li>
-						<li><a href="#">Drinks</a></li>
-						<li role="separator" class="divider"></li>
-						<li class=dropdown-header"> Specials</li>
-						<li><a href="#">Lunch Buffet</a></li>
-						<li><a href="#">Weekend</a></li>
-					</ul>
-				</li>
-				<li><a href="contactus.html">Contact</a></li>
+				<li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                         role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>_Menu <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Appetizers</a></li>
+                            <li><a href="#">Main Courses</a></li>
+                            <li><a href="#">Desserts</a></li>
+                            <li><a href="#">Drinks</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li class="dropdown-header">Specials</li>
+                            <li><a href="#">Lunch Buffet</a></li>
+                            <li><a href="#">Weekend Brunch</a></li>
+                        </ul>
+                    </li>
+				<li class="active"><a href="#"><i class="fa fa-envelope-o"></i> Contact</a></li>
 			</ul>
 			</div>
 		</div>
