--- a/about_us.html
+++ b/about_us.html
@@ -90,7 +90,7 @@ creations will tickle your culinary senses!</p>
         </div>
         
         <div class="row row-content">
-            <div class="col-xs-12">
+            <div class="col-xs-12 col-sm-8">
                 <h2>Our History</h2>
                 <p>Started in 2010, Ristorante con Fusion quickly 
 established itself as a culinary icon par excellence in Hong Kong. With 
@@ -99,8 +99,33 @@ its unique brand of world fusion cuisine that can be found nowhere else,
 four of the best three-star Michelin chefs in the world, you never know 
 what will arrive on your plate the next time you visit us.</p>
                 <p>The restaurant traces its humble beginnings to <em>The Frying Pan</em>, a successful chain started by our CEO, Mr. Peter Pan, that featured for the first time the world's best cuisines in a pan.</p>
-            </div>
-            <div class="col-xs-12">
+		
+		<div class="well">
+			<blockquote>
+				<p>You better cut the pizza in four pieces because I'm not hungry enough to eat six.</p>
+				<footer>Yogi Berra,
+				<cite title="Source Title">The Wit and Wisdom of Yogi Berra, P.Pepe, Diversion Books, 2014</cite></footer>
+			</blockquote>
+		</div>
+	   </div>
+            <div class="col-xs-12 col-sm-4">
+		<div class="panel panel-primary">
+			<div class="panel-heading">
+				<h3 class="panel-title">Facts at a glance</h3>
+			</div>
+			<div class="panel-body">
+				<dl class="dl-horizontal">
+					<dt>Started</dt>
+					<dd>3 Feb. 2013</dd>
+					<dt>Major Stake Holder</dt>
+					<dd>HK Fine Foods Inc.</dd>
+					<dt>Last Year's Turnover</dt>
+					<dd>$1,250,375</dd>
+					<dt>Employees</dt>
+					<dd>40</dd>
+				</dl>
+			</div>
+		</div>
                 <p style="padding:20px; bottom:50px;"></p>
             </div>
         </div>
@@ -137,7 +162,63 @@ fusion experiences. He says, <em>Put together the cuisines from the two craziest
                 <p style="padding:20px;"></p>
             </div>
        </div>
-
+	<div class="row row-content">
+		<div class="col-xs-12 col-sm-9">
+			<h2>Facts &amp; Figures</h2>
+			<div class="table-responsive">
+			<table class="table table-striped">
+				<tr>
+					<td>		
+						&nbsp;
+					</td>
+					<th>
+						2013
+					</th>
+					<th>
+						2014
+					</th>
+					<th>
+						2015
+					</th>
+				</tr>
+				<tr>
+					<th>
+						Employees
+					</th>
+					<td>
+						15
+					</td>
+					<td>
+						30
+					</td>
+					<td>
+						40
+					</td>
+				</tr>
+				<tr>
+					<th>
+						Guests Served
+					</th>
+					<td>15000</td>
+					<td>45000</td>
+					<td>100000</td>	
+				</tr>
+				<tr>
+					<th>Special Events</th>
+					<td>3</td>
+					<td>20</td>
+					<td>45</td>
+				</tr>
+				<tr>
+					<th>Annual Turnover</th>
+					<td>$251,325</td>
+					<td>$1,250,375</td>
+					<td>-$3,000,000</td>
+				</tr>
+			</table>
+			</div>
+		</div>
+		</div>		
     </div>
 
     <footer class="row-footer">
