--- a/about_us.html
+++ b/about_us.html
@@ -31,7 +31,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+                <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="41"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -39,7 +39,7 @@
                     <li class="active"><a href="#"><span class="glyphicon glyphicon-info-sign"></span> About</a></li>
 <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-                         role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>_Menu <span class="caret"></span></a>
+                         role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Menu <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Appetizers</a></li>
                             <li><a href="#">Main Courses</a></li>
@@ -51,7 +51,7 @@
                             <li><a href="#">Weekend Brunch</a></li>
                         </ul>
                     </li>
-                    <li class="active"><a href="#"><i class="fa fa-envelope-o"></i> Contact</a></li>
+                    <li><a href="contactus.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
                 </ul>
             </div>
         </div>
