--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
                     </li>
 				<li><a href="contactus.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
 			</ul>
+			<form class="navbar-form navbar-right" role="search">
+				<div class="form-group">
+					<input type="email" class="form-control" name="username" placeholder="Email" required>
+				</div>
+				<div class="form-group">
+					<input type="password" class="form-control" name="password" placeholder="Password" required>
+				</div>
+				<div class="form-group">
+					<input type="checkbox" class="form-control" name="remember" id="remember"><label for="remember" style="color:white">Remember Me</label>
+				</div>
+				<button type="submit" class="btn btn-sm btn-primary">Sign In</button>
+			</form>
 			</div>
 		</div>
 	</nav>
@@ -67,8 +79,14 @@
                 </div>
                 <div class="col-xs-12 col-sm-2">
 			<p style="padding:20px"></p>
-			<img src="img/logo.png" class="image-responsive">			
+			<img src="img/logo.png" class="image-responsive">
                 </div>
+		<div class="col-xs-12 col-sm-2">
+			<p style="padding:40px"></p>
+			<a href="#reservation">
+				<button class="btn btn-warning">Reserve Table</button>
+			</a>
+		</div>
             </div>
         </div>
     </header>
@@ -85,7 +103,7 @@
                 <h3 align="center">Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-		<div class="media">	
+		<div class="media">
 			<div class="media-left media-middle">
 				<a href="#">
 				<img class="media-object img-thumbnail" src="img/uthappizza.png" alt="Uthappizza">
@@ -107,13 +125,20 @@
                 <h3 align=center>This Month's Promotions</h3>
             </div>
             <div class="col-xs-12 col-sm-9">
-
-                <h2>Weekend Grand Buffet</h2>
+								<div class="media-body">
+									<h2 class="media-heading">Weekend Grand Buffet<span class="label label-danger">New</span></h2>
                 <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
                 <p><a class="btn btn-primary btn-xs" href="#">More &raquo;</a></p>
+							</div>
+							<div class="media-right media-middle">
+									<a href="#">
+										<img class="media-object img-thumbnail" src="img/buffet.png" alt="Weekend Grand Buffet">
+									</a>
+								</div>
+						</div>
             </div>
         </div>
-
+				<div class="container">
         <div class="row row-content">
             <div class="col-xs-12 col-sm-3 col-sm-push-9">
                 <p style="padding:20px;"></p>
@@ -135,11 +160,74 @@
 		</div>
             </div>
         </div>
-    </div>
-
+	<div class="row row-content" id="reservation">
+		<div class="col-xs-12 col-sm-3">
+			<p style="padding:20px"></p>
+			<center>
+			<h3>Reserve a Table</h3>
+			</center>
+		</div>
+		<div class="col-xs-12 col-sm-9">
+			<form class="form-horizontal" role="form">
+				<div class="form-group">
+					<label for="guests" class="col-sm-2 control-label">Number of Guests</label>
+					<div class="col-sm-10" id="guests">
+						<label class="radio-inline">
+							<input type="radio" class="form-control" name="guests" id="guests">1
+						</label>
+						<label class="radio-inline">
+							<input type="radio" class="form-control" name="guests" id="guests">2
+						</label>
+						<label class="radio-inline">
+							<input type="radio" class="form-control" name="guests" id="guests">3
+						</label>
+						<label class="radio-inline">
+							<input type="radio" class="form-control" name="guests" value="4">4
+						</label>
+						<label class="radio-inline">
+							<input type="radio" class="form-control" name="guests" value="5">5
+						</label>
+						<label class="radio-inline">
+							<input type="radio" class="form-control" name="guests" value="6">6
+						</label>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="dateandtime" class="col-sm-2 control-label">Date and Time</label>
+					<div class="col-sm-10">
+						<div class="col-sm-4">
+						<div class="inner-addon right-addon">
+							<i class="glyphicon glyphicon-calendar"></i>
+							<input type="date" class="form-control" id="dateandtime" name="date" placeholder="Date" value="">
+ 						</div>
+					</div>
+						<div class="col-sm-4">
+							<div class="inner-addon right-addon">
+							<i class="glyphicon glyphicon-time"></i>
+							<input type="time" class="form-control" id="dateandtime" name="time" placeholder="Time" value="">
+						</div>
+					</div>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-sm-2">
+						<p style="padding:20px"></p>
+					</div>
+					<div class="col-sm-10">
+						<button type="submit" class="btn btn-primary">Reserve</button>
+					</div>
+				</div>
+				<div class="alert alert-warning alert-dismissible" role="alert">
+					<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span>
+				</button>
+				Warning:: Please <a href="+852 1234 5678">call</a> us to reserve for more than six guests
+			</div>
+			</form>
+		</div>
+	</div>
    <footer class="row-footer">
         <div class="container">
-            <div class="row">             
+            <div class="row">
                 <div class="col-xs-5 col-xs-offset-1 col-sm-2 col-sm-offset-1">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
@@ -157,7 +245,7 @@
 		              HONG KONG<br>
 		              <i class="fa fa-phone"></i>: +852 1234 5678<br>
 		              <i class="fa fa-fax"></i>: +852 8765 4321<br>
-		              <i class="fa fa-envelope"></i>: 
+		              <i class="fa fa-envelope"></i>:
                         <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
                 </div>
