--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<div class="form-group">
 					<input type="checkbox" class="form-control" name="remember" id="remember"><label for="remember" style="color:white">Remember Me</label>
 				</div>
-				<button type="submit" class="btn btn-sm btn-primary">Sign In</button>
+				<button type="submit" class="btn btn-sm btn-info">Sign In</button>
 			</form>
 			</div>
 		</div>
@@ -173,22 +173,22 @@
 					<label for="guests" class="col-sm-2 control-label">Number of Guests</label>
 					<div class="col-sm-10" id="guests">
 						<label class="radio-inline">
-							<input type="radio" class="form-control" name="guests" id="guests">1
+							<input type="radio" name="guests" id="guests">1
 						</label>
 						<label class="radio-inline">
-							<input type="radio" class="form-control" name="guests" id="guests">2
+							<input type="radio" name="guests" id="guests">2
 						</label>
 						<label class="radio-inline">
-							<input type="radio" class="form-control" name="guests" id="guests">3
+							<input type="radio" name="guests" id="guests">3
 						</label>
 						<label class="radio-inline">
-							<input type="radio" class="form-control" name="guests" value="4">4
+							<input type="radio" name="guests" value="4">4
 						</label>
 						<label class="radio-inline">
-							<input type="radio" class="form-control" name="guests" value="5">5
+							<input type="radio" name="guests" value="5">5
 						</label>
 						<label class="radio-inline">
-							<input type="radio" class="form-control" name="guests" value="6">6
+							<input type="radio" name="guests" value="6">6
 						</label>
 					</div>
 				</div>
