--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 				</div>
 				<div class="form-group">
 					<label for="dateandtime" class="col-sm-2 control-label">Date and Time</label>
-					<div class="col-sm-10">
+					<div>
 						<div class="col-sm-4">
 						<div class="inner-addon right-addon">
 							<i class="glyphicon glyphicon-calendar"></i>
