--- a/contactus.html
+++ b/contactus.html
@@ -87,6 +87,8 @@
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
                 <div class="col-xs-12 col-sm-4">
+                  <p style="padding:20px"></p>
+            			<img src="img/logo.png" class="image-responsive">
                 </div>
             </div>
         </div>
