--- a/about_us.html
+++ b/about_us.html
@@ -96,13 +96,13 @@ creations will tickle your culinary senses!</p>
           <div class="col-xs-12 col-sm-10">
             <div class="row">
             <div class="col-xs-12">
-            	<ol class="breadcrumb">
-			<li><a href="index.html">Home</a></li>
-			<li class="active">About</li>
-		</ol>
-	    </div>
-            <div>
-               <h3>About Us</h3>
+            	<ul class="breadcrumb">
+			             <li><a href="index.html">Home</a></li>
+			             <li class="active">About</li>
+		          </ul>
+	          </div>
+            <div class="col-xs-12">
+               <h3> About Us</h3>
                <hr>
             </div>
         </div>
@@ -282,7 +282,7 @@ fusion experiences. He says, <em>Put together the cuisines from the two craziest
 		</div>
   </div>
     <nav class="hidden-xs col-sm-2" id="myScrollspy">
-      <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="40">
+      <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="400">
         <li><a href="#history">Our History</a></li>
         <li><a href="#corporate">Corporate</a></li>
         <li><a href="#facts">Facts</a></li>
