--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 								<div class="item active">
 									<img class="img-responsive" src="img/uthappizza.png" alt="Uthappizza">
 									<div class="carousel-caption">
-										<h2>Uthappizza <span class="label label-danger-xs">Hot</span> <span class="badge">$4.99</span></h2>
+										<h2>Uthappizza <span class="label label-danger">Hot</span> <span class="badge">$4.99</span></h2>
 										<p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
 		                <p><a  class="btn btn-primary btn-xs" href="#"><strong>More &raquo;</strong></a></p>
 									</div>
@@ -246,6 +246,15 @@
 								<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 								<span class="sr-only">Next</span>
 							</a>
+							<div class="btn-group" id="carouselButtons">
+								<button class="btn btn-danger btn-xs" id="carousel-pause">
+									<span class="glyphicon glyphicon-pause" aria-hidden="true"></span>
+								</button>
+								<button class="btn btn-danger btn-xs">
+									<span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+								</button>
+							</div>
+
 
 						</div>
 					</div>
@@ -355,6 +364,16 @@
     	</footer>
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 			<script src="js/bootstrap.min.js"></script>
-
+			<script>
+				$(document).ready(function(){
+					$("#mycarousel").carousel({interval:2000});
+					$("#carousel-pause").click(function(){
+						$("#mycarousel").carousel('pause');
+					});
+					$("#carousel-play").click(function(){
+						$("#mycarousel").carousel('cycle');
+					});
+				});
+				</script>
 </body>
 </html>
