--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<title>Ristorante Con Fusion</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
-	<link href="mystyles.css" rel="stylesheet">
+	<link href="css/mystyles.css" rel="stylesheet">
 	<link href="css/font-awesome.min.css" rel="stylesheet">
 	<link href="css/bootstrap-social.css" rel="stylesheet">
 </head>
