--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<li><a href="contactus.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a data-toggle="modal" data-target="#loginModal">
+				<li><a id="loginButton">
 					<span class="glyphicon glyphicon-log-in"></span> Login</a>
 				</li>
 			</ul>
@@ -60,7 +60,7 @@
 		<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal">&times;</button>
+						<button type="button" class="close closeLogin" >&times;</button>
 						<h4 class="modal-title">Login</h4>
 					</div>
 					<div class="modal-body">
@@ -78,7 +78,7 @@
 							</div>
 							<p style="padding:2px"></p>
 							<button type="submit" class="btn btn-sm btn-info"><strong>Sign In</strong></button>
-							<button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
+							<button type="button" class="btn btn-default btn-sm closeLogin" >Cancel</button>
 						</form>
 					</div>
 				</div>
@@ -105,7 +105,7 @@
                 </div>
 		<div class="col-xs-12 col-sm-2">
 			<p style="padding:40px"></p>
-			<a type="button" class="btn btn-warning btn-block" data-toggle="modal" href="#reservation">
+			<a id="reservationButton" type="button" class="btn btn-warning btn-block">
 				<strong>Reserve Table</strong>
 			</a>
 		</div>
@@ -117,7 +117,7 @@
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal">&times;</button>
+						<button type="button" class="close closeReservation">&times;</button>
 						<h4 class="modal-title">Reserve Table</h4>
 					</div>
 					<div class="modal-body">
@@ -181,7 +181,7 @@
 							</div>
 							<div class="col-sm-10">
 								<button type="submit" class="btn btn-primary"><strong>Reserve</strong></button>
-								<button type="button" class="btn btn-default" data-dismiss="modal"><strong>Cancel</strong></button>
+								<button type="button" class="btn btn-default closeReservation"><strong>Cancel</strong></button>
 							</div>
 						</div>
 						<div class="alert alert-warning alert-dismissible" role="alert">
@@ -372,6 +372,18 @@
 					});
 					$("#carousel-play").click(function(){
 						$("#mycarousel").carousel('cycle');
+					});
+					$("#loginButton").click(function(){
+						$("#loginModal").modal('show');
+					});
+					$("#reservationButton").click(function(){
+						$("#reservation").modal('show');
+					});
+					$(".closeReservation").click(function(){
+						$("#reservation").modal('toggle');
+					});
+					$(".closeLogin").click(function(){
+						$("#loginModal").modal('toggle');
 					});
 				});
 				</script>
